Fix some labels and alignment

--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
 }
 
 .erecruit-form {  
-  padding: 20px 60px 15px 60px;
+  padding: 20px 60px 10px 60px;
   background-color: #ffffff;
 }
 .uppercase {
